update for the issue (#1)